feat: agregar endpoints batch para ultima barra y refactorizar DxLink a canales multiplexados
- Nuevos endpoints POST /historical/batch/last y /historical/batch/current
  para obtener la ultima barra cerrada o en formacion de multiples simbolos en una sola llamada
- DxLinkClient refactorizado: de canal global unico a modelo de canales multiplexados
  con clase interna DxLinkChannel que encapsula estado y callbacks por canal
- TastyTradeService usa canal dedicado por batch call via openNewChannel(),
  elimina ReentrantLock que ya no es necesario
- Nuevo getCandlesBatchNoCache() que omite cache para obtener datos frescos
- HistoricalDataRestController: limite de barras por defecto reducido de 700 a 100